objects/Queue_Users__c.object
<CustomObject>
    <description>This object will hold the user details of the Queue Details object record</description>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Queue_Assignee__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queue Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queue_Detail_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue_Details__c</fullName>
        <label>Queue Details</label>
        <referenceTo>Queue_Details__c</referenceTo>
        <relationshipName>Queue_Detail_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Queue_Assignee__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <label>Queue User Details</label>
    <nameField>
        <displayFormat>U-{000000}</displayFormat>
        <label>Queue User Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue User Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>